--- a/Practice.html
+++ b/Practice.html
@@ -5,15 +5,16 @@
     <title>Page Title</title>
 </head>
 
-<body style="background-color: rgb(243, 239, 231);">
-    <h1>My First Heading</h1>
+<body style="background-color: rgb(255, 255, 255);">
+    <h1 style="text-align: center;">My First Heading</h1>
     <p style="color: blue;">My first paragraph (blue)</p>
     <h1 style="color:red;">This is heading</h1>
-    <h2>This is heading</h2>
+    <h2><mark><ins>This is heading</ins></mark></h2>
     <h3>This is heading</h3>
-    <p>This is another <br> paragraph</p>
+    <h3><em>This is heading</em></h3>
+    <p>This <sub>is another</sub><sup>paragraph</sup><br> <sup>paragraph</sup></p>
     <a href="https://www.w3schools.com">Visit W3Schools</a>
-    <p title="I'm a tooltip"> This is a paragraph</p>
+    <p style="font-size: 200%;"title="I'm a tooltip"> This is a <del>paragraph</del></p>
     <img src="https://www.w3schools.com/images/colorpicker.png" alt="W3Schools.com" width="160" height="142">
     <br>
     <br>
@@ -24,7 +25,18 @@ Hola mundo!
 Hola   mundo!
 HolaHolaHola
     </pre>
-
+<p>Here is the quote</p>
+<p>
+<blockquote cite="http://www.worldwildlife.org/who/index.html">
+For 50 years, WWF has been protecting the future of nature.
+The world's leading conservation organization,
+WWF works in <q>100 countries and is supported by</q>
+</blockquote>
+</p>
+<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
+<bdo dir="rtl">This line will be written from right to left</bdo>
+<h1 style="border:6px solid tomato; text-align: center;">Tomato</h1>
+<h1 style="background-color: mediumseagreen; text-align: center; color: white;">Hello World</h1>
 </body>
 </html>
 
@@ -41,5 +53,38 @@ Use font-family for text fonts
 Use font-size for text sizes
 Use text-align for text alignment
 
-fo
+Formatting elements were designed to display special types of text:
+<b> - Bold text
+<strong> - Important text
+<i> - Italic text
+<em> - Emphasized text // Tip: A screen reader will pronounce the words in <em> with an emphasis, using verbal stress.
+<mark> - Marked text
+<small> - Smaller text
+<del> - Deleted text
+<ins> - Inserted text
+<sub> - Subscript text
+<sup> - Superscript text
+
+HTML Quotation and Citation Elements
+Tag	Description
+<abbr>	Defines an abbreviation or acronym
+<address>	Defines contact information for the author/owner of a document
+<bdo>	Defines the text direction
+<blockquote>	Defines a section that is quoted from another source
+<cite>	Defines the title of a work
+<q>	Defines a short inline quotation
+
+<p>Same as color name "Tomato":</p>
+
+<h1 style="background-color:rgb(255, 99, 71)">rgb(255, 99, 71)</h1>
+<h1 style="background-color:#ff6347;">#ff6347</h1>
+<h1 style="background-color:hsl(9, 100%, 64%);">hsl(9, 100%, 64%)</h1>
+
+<p>Same as color name "Tomato", but 50% transparent:</p>
+<h1 style="background-color:rgba(255, 99, 71, 0.5);">rgba(255, 99, 71, 0.5)</h1>
+<h1 style="background-color:hsla(9, 100%, 64%, 0.5);">hsla(9, 100%, 64%, 0.5)</h1>
+
+<p>In addition to the predefined color names, colors can be specified using RGB, HEX, HSL, or even transparent colors using RGBA or HSLA color values.</p>
+
+</body>
 -->
