--- a/Practice.html
+++ b/Practice.html
@@ -42,6 +42,7 @@ HolaHolaHola
 </html>
 
 <!--
+The <a> tag defines a hyperlink, which is used to link from one page to another
 <p>	Defines a paragraph
 <hr>	Defines a thematic change in the content
 <br>	Inserts a single line break
