--- a/Practice.html
+++ b/Practice.html
@@ -36,7 +36,9 @@ HolaHolaHola
     <p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
     <bdo dir="rtl">This line will be written from right to left</bdo>
     <h1 style="border:6px solid tomato; text-align: center;">Tomato</h1>
-    <h1 style="background-color: mediumseagreen; text-align: center; color: white;">Hello World</h1>
+    <h1 style="background-color: rgba(0,255,0, 0.7); text-align: center; color: white;">Hello World</h1>
+
+    <script src="js/app.js"></script>
 </body>
 
 </html>
@@ -86,6 +88,12 @@ Tag	Description
 <h1 style="background-color:hsla(9, 100%, 64%, 0.5);">hsla(9, 100%, 64%, 0.5)</h1>
 
 <p>In addition to the predefined color names, colors can be specified using RGB, HEX, HSL, or even transparent colors using RGBA or HSLA color values.</p>
+
+An RGB color value represents RED, GREEN, and BLUE light sources.
+An RGBA color value is an extension of RGB with an Alpha channel (opacity).
+Shades of gray are often defined using equal values for all three parameters:
+rgb(60, 60, 60), 
+rgb(180, 180, 180)
 
 </body>
 -->
