--- a/Practice.html
+++ b/Practice.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
 </head>
 
@@ -94,6 +96,29 @@ An RGBA color value is an extension of RGB with an Alpha channel (opacity).
 Shades of gray are often defined using equal values for all three parameters:
 rgb(60, 60, 60), 
 rgb(180, 180, 180)
+
+Where rr (red), gg (green) and bb (blue) are hexadecimal values between 00 and ff (same as decimal 0-255).
+For example, #ff0000 is displayed as red, because red is set to its highest value (ff), and the other two 
+(green and blue) are set to 00.
+
+HSL stands for hue, saturation, and lightness.
+HSLA color values are an extension of HSL with an Alpha channel (opacity)
+hsl(hue, saturation, lightness)
+
+Hue is a degree on the color wheel from 0 to 360. 0 is red, 120 is green, and 240 is blue.
+Saturation is a percentage value, 0% means a shade of gray, and 100% is the full color.
+Lightness is also a percentage value, 0% is black, and 100% is white.
+<h1 style="background-color:hsl(0, 100%, 50%);">hsl(0, 100%, 50%)</h1>
+
+hsla(hue, saturation, lightness, alpha)
+HSLA color values are an extension of HSL color values with an Alpha channel - 
+which specifies the opacity for a color.
+
+CSS stands for Cascading Style Sheets.
+Cascading Style Sheets (CSS) is used to format the layout of a webpage.
+Inline - by using the style attribute inside HTML elements
+Internal - by using a <style> element in the <head> section
+External - by using a <link> element to link to an external CSS file
 
 </body>
 -->
