--- a/Practice.html
+++ b/Practice.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
+    <link rel="stylesheet" href="Practice.css">
+    <style>
+        body {background-color: powderblue;}
+        h1 {color: blue;}
+        p {color: red;}
+    </style>
 </head>
 
-<body style="background-color: rgb(255, 255, 255);">
+<body>
     <h1 style="text-align: center;">My First Heading</h1>
     <p style="color: blue;">My first paragraph (blue)</p>
     <h1 style="color:red;">This is heading</h1>
@@ -42,83 +48,5 @@ HolaHolaHola
 
     <script src="js/app.js"></script>
 </body>
-
 </html>
 
-<!--
-<p>	Defines a paragraph
-<hr>	Defines a thematic change in the content
-<br>	Inserts a single line break
-<pre>	Defines pre-formatted text
-
-Use the style attribute for styling HTML elements
-Use background-color for background color
-Use color for text colors
-Use font-family for text fonts
-Use font-size for text sizes
-Use text-align for text alignment
-
-Formatting elements were designed to display special types of text:
-<b> - Bold text
-<strong> - Important text
-<i> - Italic text
-<em> - Emphasized text // Tip: A screen reader will pronounce the words in <em> with an emphasis, using verbal stress.
-<mark> - Marked text
-<small> - Smaller text
-<del> - Deleted text
-<ins> - Inserted text
-<sub> - Subscript text
-<sup> - Superscript text
-
-HTML Quotation and Citation Elements
-Tag	Description
-<abbr>	Defines an abbreviation or acronym
-<address>	Defines contact information for the author/owner of a document
-<bdo>	Defines the text direction
-<blockquote>	Defines a section that is quoted from another source
-<cite>	Defines the title of a work
-<q>	Defines a short inline quotation
-
-<p>Same as color name "Tomato":</p>
-
-<h1 style="background-color:rgb(255, 99, 71)">rgb(255, 99, 71)</h1>
-<h1 style="background-color:#ff6347;">#ff6347</h1>
-<h1 style="background-color:hsl(9, 100%, 64%);">hsl(9, 100%, 64%)</h1>
-
-<p>Same as color name "Tomato", but 50% transparent:</p>
-<h1 style="background-color:rgba(255, 99, 71, 0.5);">rgba(255, 99, 71, 0.5)</h1>
-<h1 style="background-color:hsla(9, 100%, 64%, 0.5);">hsla(9, 100%, 64%, 0.5)</h1>
-
-<p>In addition to the predefined color names, colors can be specified using RGB, HEX, HSL, or even transparent colors using RGBA or HSLA color values.</p>
-
-An RGB color value represents RED, GREEN, and BLUE light sources.
-An RGBA color value is an extension of RGB with an Alpha channel (opacity).
-Shades of gray are often defined using equal values for all three parameters:
-rgb(60, 60, 60), 
-rgb(180, 180, 180)
-
-Where rr (red), gg (green) and bb (blue) are hexadecimal values between 00 and ff (same as decimal 0-255).
-For example, #ff0000 is displayed as red, because red is set to its highest value (ff), and the other two 
-(green and blue) are set to 00.
-
-HSL stands for hue, saturation, and lightness.
-HSLA color values are an extension of HSL with an Alpha channel (opacity)
-hsl(hue, saturation, lightness)
-
-Hue is a degree on the color wheel from 0 to 360. 0 is red, 120 is green, and 240 is blue.
-Saturation is a percentage value, 0% means a shade of gray, and 100% is the full color.
-Lightness is also a percentage value, 0% is black, and 100% is white.
-<h1 style="background-color:hsl(0, 100%, 50%);">hsl(0, 100%, 50%)</h1>
-
-hsla(hue, saturation, lightness, alpha)
-HSLA color values are an extension of HSL color values with an Alpha channel - 
-which specifies the opacity for a color.
-
-CSS stands for Cascading Style Sheets.
-Cascading Style Sheets (CSS) is used to format the layout of a webpage.
-Inline - by using the style attribute inside HTML elements
-Internal - by using a <style> element in the <head> section
-External - by using a <link> element to link to an external CSS file
-
-</body>
--->
