--- a/Practice.html
+++ b/Practice.html
@@ -6,14 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <link rel="stylesheet" href="Practice.css">
-    <style>
-        body {background-color: powderblue;}
-        h1 {color: blue;}
-        p {color: red;}
-    </style>
 </head>
 
 <body>
+    <p>HOLA A TODOS</p>
     <h1 style="text-align: center;">My First Heading</h1>
     <p style="color: blue;">My first paragraph (blue)</p>
     <h1 style="color:red;">This is heading</h1>
@@ -45,7 +41,9 @@ HolaHolaHola
     <bdo dir="rtl">This line will be written from right to left</bdo>
     <h1 style="border:6px solid tomato; text-align: center;">Tomato</h1>
     <h1 style="background-color: rgba(0,255,0, 0.7); text-align: center; color: white;">Hello World</h1>
-
+    <p>Box 1</p>
+    <p>Box 1</p>
+    <p>Box 1</p>
     <script src="js/app.js"></script>
 </body>
 </html>
