--- a/Practice.html
+++ b/Practice.html
@@ -25,12 +25,10 @@
     <pre>
 Hola mundo!
 <hr>
-
 Hola   mundo!
 HolaHolaHola
     </pre>
     <p>Here is the quote</p>
-    <p>
     <blockquote cite="http://www.worldwildlife.org/who/index.html">
         For 50 years, WWF has been protecting the future of nature.
         The world's leading conservation organization,
@@ -40,7 +38,7 @@ HolaHolaHola
     <p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
     <bdo dir="rtl">This line will be written from right to left</bdo>
     <h1 style="border:6px solid tomato; text-align: center;">Tomato</h1>
-    <h1 style="background-color: rgba(0,255,0, 0.7); text-align: center; color: white;">Hello World</h1>
+    <h1 style="background-color: rgba(0,255,0, 0.7); text-align: center; color:rgb(0, 0, 0);border:5px solid black;">Hello World</h1>
     <p>Box 1</p>
     <p>Box 1</p>
     <p>Box 1</p>
