Adding columns and rows, styles etc.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
 </head>
 
 <body>
+    <h2>A basic HTML table</h2>
+
+    <table style="width:100%;">
+        <caption style="font-size: 30px;"><strong>Table name</strong></caption>
+    <tr>
+        <th style="width:70%;" colspan="2">Company</th>
+        <th style="text-align:center;">Contact</th>
+    </tr>
+    <tr style="height: 100px;">
+        <td>Sweet Label</td>
+        <td>Roberts F.</td>
+        <td rowspan="3" style="text-align: center ;">Mexico</td>
+    </tr>
+    <tr>
+        <td>Centro comercial Moctezuma</td>
+        <td>Francisco Chang</td>
+    </tr>
+    <tr>
+        <td>Prueba celda1</td>
+        <td>Prueba celda2</td>
+    </tr>
+    </table>
+
     <p><a href="#tomato">Jump to Tomato</a></p>
     <p>HOLA A TODOS</p>
     <h1 style="text-align: center;">My First Heading</h1>
@@ -54,6 +77,7 @@ HolaHolaHola
         <img src="https://www.w3schools.com/html/smiley.gif" style="float: left; width: 42px; height: 42px;"> 
         paragraph with a floating image. A paragraph with a floating image. A paragraph with a floating image.
     </p>
+    
 </body>
 </html>
 
