--- a/index.html
+++ b/index.html
@@ -15,21 +15,24 @@
     <table style="width:100%;">
         <caption style="font-size: 30px;"><strong>Table name</strong></caption>
     <tr>
-        <th style="width:70%;" colspan="2">Company</th>
-        <th style="text-align:center;">Contact</th>
+        <th style="text-align: left;">Company</th>
+        <th style="text-align: left;">Contact</th>
+        <th style="text-align: left;"">Country</th>
     </tr>
-    <tr style="height: 100px;">
+    <tr>
         <td>Sweet Label</td>
         <td>Roberts F.</td>
-        <td rowspan="3" style="text-align: center ;">Mexico</td>
+        <td>Mexico</td>
     </tr>
     <tr>
         <td>Centro comercial Moctezuma</td>
         <td>Francisco Chang</td>
+        <td>Prueba</td>
     </tr>
     <tr>
         <td>Prueba celda1</td>
         <td>Prueba celda2</td>
+        <td>Prueba celda3</td>
     </tr>
     </table>
 
@@ -72,8 +75,8 @@ HolaHolaHola
     <script src="js/app.js"></script>
     <a id="linkbutton1" href="https://www.w3schools.com/" target="_blank" title="Go to our Website and learn more">Visit W3Schools.com</a>
     <br>
-    <button onclick="document.location='https://www.w3schools.com/'" >Site Location</button>
-    <p id="float1" style="background-image: https://cdn.pixabay.com/photo/2022/06/21/21/56/konigssee-7276585_960_720.jpg;">
+    <button onclick="document.location='//www.w3schools.com/'" >Site Location</button>
+    <p id="float1" style="background-image: url('https://cdn.pixabay.com/photo/2022/06/21/21/56/konigssee-7276585_960_720.jpg')">
         <img src="https://www.w3schools.com/html/smiley.gif" style="float: left; width: 42px; height: 42px;"> 
         paragraph with a floating image. A paragraph with a floating image. A paragraph with a floating image.
     </p>
